[package]
name = "imgcmp-lib"
version = "0.1.0"
authors = ["George Boulougaris <gboulougaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
nalgebra = "0.23.1"
ndarray = "0.14.0"

[dev-dependencies]
image = "0.23.12"